--- a/css/main.scss
+++ b/css/main.scss
@@ -6,20 +6,23 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; 
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
+$text-color:       #333;
+$background-color: #f7f9f9;
 $brand-color:      #2a7ae2;
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color:       #aab2bd;
+$grey-color-light: #e7e7e7;
+$grey-color-vlight: #f0f3f4;
+$grey-color-dark:  #333;
+
+$blue-color-dark:  #2c3e50;
 
 $on-palm:          600px;
 $on-laptop:        800px;
@@ -45,5 +48,6 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "navbar"
 ;
