Modified footer to include share icons.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -115,6 +115,7 @@
 }
 
 .footer-col {
+    text-align: center;
     float: left;
     margin-bottom: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
