Added contributer section.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,10 @@
 
 
     <div class="footer-col-wrapper">
+
+      <p>Thanks to <a href="https://github.com/rubinovitz">JB Rubinovitz</a>, <a href="https://github.com/aleksandar-todorovic">Aleksandar Todorović</a>, <a href="https://github.com/grant">Grant Timmerman</a>, <a href="https://github.com/Robmaister">Robert Rouhani</a>, <a href="https://github.com/ruthgrace">Ruth Grace Wong</a> and <a href="https://github.com/tbarn">Taylor Barnett</a> for making commits to the MLH Hackathon Organizer's Guide.</p>
+
+
       <div class="footer-col  footer-col-1">
         <span class="icon  icon--twitter">
                 <svg viewBox="0 0 32 32">
