--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'MLH Outage';
-    src: url('/assets/fonts/outage.ttf');
+    font-family: "MLH Outage";
+    src: url("/assets/fonts/outage.ttf");
 }
 
 /* Summary */
@@ -10,7 +10,7 @@
 }
 
 .book .book-summary ul.summary:before {
-  background: url('/assets/images/miscellaneous/logos/mlh-whitescale.png') center center no-repeat;
+  background: url("/assets/images/miscellaneous/logos/mlh-whitescale.png") center center no-repeat;
   background-size: 35% auto;
   width: 100%;
   height: 110px;
@@ -23,7 +23,7 @@
 }
 
 .book .book-summary ul.summary {
-  background: #E73152;
+  background: #353535;
 }
 
 .book .book-summary ul.summary li span {
@@ -33,7 +33,7 @@
 
 .book .book-summary ul.summary li a,
 .book .book-summary ul.summary li span {
-  color: #FFADC5;
+  color: #9C9C9C;
 }
 
 .book .book-summary ul.summary li a:hover,
@@ -46,7 +46,7 @@
 .book .book-summary .book-search input,
 .book .book-summary .book-search input:focus,
 .book .book-summary .book-search input:hover {
-  color: #E73152;
+  color: #353535;
   text-align: center;
 }
 
@@ -65,14 +65,14 @@
 /* Content */
 
 .book .book-body .page-wrapper .page-inner h1 {
-  font-family: 'MLH Outage', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "MLH Outage", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .book .book-body .page-wrapper .page-inner section.normal a {
-  color: #E73152;
+  color: #318CE7;
 }
 
 .book .book-body .page-wrapper .page-inner section.normal a:focus,
 .book .book-body .page-wrapper .page-inner section.normal a:hover {
-  color: #E73152;
+  color: #0047AB;
 }
